# building-perceptron

./: .gitignore  README.md  analysis_utils.py  classification.py  clean.ipynb  cleaning.ipynb  eda.ipynb  eda_utils.py  main.py  perceptron.py  pipeline.py  pyproject.toml  sequentiel.py
